syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./;snapshotsync";

package snapshotsync;


enum SnapshotType {
  headers = 0;
  bodies = 1;
  state = 2;
  receipts = 3;
}

service Downloader {
  rpc Download (DownloadSnapshotRequest) returns (google.protobuf.Empty) {}
  rpc Snapshots (SnapshotsRequest) returns (SnapshotsInfoReply) {}
}

message DownloadSnapshotRequest {
  uint64 network_id = 1;
  repeated SnapshotType type = 2;
}

message SnapshotsRequest {
    uint64 network_id = 1;
}

message SnapshotsInfo {
  SnapshotType type = 1;
  bool gotInfoByte = 2;
  int32 readiness = 3;
  uint64 snapshotBlock = 4;
  string dbpath = 5;
}

message SnapshotsInfoReply {
  repeated SnapshotsInfo info = 1;
}
